- fix bug overlaping text card

--- a/assets/sass/pages/_assi-ppai.scss
+++ b/assets/sass/pages/_assi-ppai.scss
@@ -139,6 +139,9 @@
         .card {
           &__content--description {
             height: 144px;
+            @include respond-to("<=s") { 
+              height: auto;
+            }
           }
         }
         &__manufacturing {
